--- a/eStoreClient/Views/Product/Index.cshtml
+++ b/eStoreClient/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<eStoreClient.Models.ProductViewModel>
+﻿@model IEnumerable<BusinessObject.Models.Product>
 
 @{
     ViewData["Title"] = "Index";
