--- a/eStoreClient/Views/Member/Index.cshtml
+++ b/eStoreClient/Views/Member/Index.cshtml
@@ -56,9 +56,9 @@
                     @Html.DisplayFor(modelItem => item.Password)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Edit", "Edit", new { id=item.MemberId }) |
+                    
+                    @Html.ActionLink("Delete", "Delete", new { id=item.MemberId })
                 </td>
             </tr>
         }
