--- a/eStoreClient/Views/Order/Index.cshtml
+++ b/eStoreClient/Views/Order/Index.cshtml
@@ -56,9 +56,9 @@
                     @Html.DisplayFor(modelItem => item.Freight)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Edit", "Edit", new {  id=item.OrderId  }) |
+                    
+                    @Html.ActionLink("Delete", "Delete", new {  id=item.OrderId })
                 </td>
             </tr>
         }
