--- a/eStoreClient/Views/OrderDetails/Index.cshtml
+++ b/eStoreClient/Views/OrderDetails/Index.cshtml
@@ -50,9 +50,9 @@
                     @Html.DisplayFor(modelItem => item.Discount)
                 </td>
                 <td>
-                    @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                    @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                    @Html.ActionLink("Edit", "Edit", new { id=item.OrderId  }) |
+
+                    @Html.ActionLink("Delete", "Delete", new { id=item.OrderId  })
                 </td>
             </tr>
         }
