--- a/eStoreClient/Views/Product/Index.cshtml
+++ b/eStoreClient/Views/Product/Index.cshtml
@@ -55,9 +55,9 @@
                 @Html.DisplayFor(modelItem => item.UnitsInStock)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new {  id=item.ProductId }) |
+               
+                    @Html.ActionLink("Delete", "Delete", new { id=item.ProductId })
             </td>
         </tr>
 }
